--- a/ElectionGuard-COMP413/package.json
+++ b/ElectionGuard-COMP413/package.json
@@ -36,7 +36,8 @@
     "esbuild-browser:watch": "esbuild src/index.ts --bundle --watch --outfile=dist/esbuild/out.js && cp dist/esbuild/out.js demo/frontend",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "esbuild-node:dev": "esbuild src/cli.ts --bundle --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild-node:watch": "esbuild src/cli.ts --bundle --watch --sourcemap=external --outfile=dist/esbuild/cli.js"
+    "esbuild-node:watch": "esbuild src/cli.ts --bundle --watch --sourcemap=external --outfile=dist/esbuild/cli.js",
+    "electis": "esbuild src/electis.ts --bundle --sourcemap=external --outfile=dist/esbuild/electis.js && cp dist/esbuild/electis.js demo/frontend"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
